		do anything
	- Fixed a slight logic error that could give a weird error when 
		you attempted to create two users with the same username
	- Removed the last of the short php tags
	- Reworked Search to allow for multiple searches, and eventually
		allow you to return a list of albums,artist,genres
		rather than a list of songs. 


  
--------------------------------------------------------------------------
  v.3.3.2-Alpha2 08/14/2005
  	- Improved MPD URL method so it acts just like file method 
		(Thx Sigger, Trey)
	- Added Simplified Chinese (Thx Hongyi Gao)
	- Fixed XMLRPC session checking
	- Fixed up the init_mpd() function to prevent errors on local play
		page
	- Updated Now Playing to account for new db structure
	- Fixed Now Playing so that songs played by the MPD file method
		actually show up (Thx sigger)
	- Fixed Now Playing so that if Windows Media Player is detected
		it handles it correctly, and doesn't remove the row after
		the script execution has finished, and depends upon the
		GC to catch it
	- Added Optional Automatic Bandwidth management for downsampled
		users based on defined bandwidth limits (Thx Jens)
	- Prevented Load of XML-RPC library if xml_rpc isn't enabled
	- Correctly deleted the session when deleting a user
	- Added Search Bar to main page (Thx sigger)
	- Added British English (Thx ??? <I need to look it up>)
	- Added optional automatic resizing of thumbnails using php-gd
	- Improved Upload System (Thx Rosensama)
	- Added Download Selected Option if Zip Downloads are allowed
	- Added Genre Browsing
	- Fixed problem where catalog wouldn't clean unused genre
		entries
	- Fixed a security problem with Albums & Artists browse pages
	- Fixed Logout button showing up when use_auth was false


--------------------------------------------------------------------------
  v.3.3.2-Alpha1 07/11/2005:
  	- Added Spanish Translation (Thx ros)
	- Fixed Menu Highlight when using a Translation
	- More HTML cleanup (Thx Xgizzmo)